CM160Utils Changelog

Version 1.3.3
+ Improved FindAndInvoke for when multiple methods could be invoked, identifying the best one to use.

Version 1.3.2
+ Improved ParamUtils to be able to handle null arguments, thus making all reflective utilities capable of accepting null arguments.

Version 1.3.1
+ Improved ExceptionHandler so it could handle a wider range of exception conditions.

Version 1.3
+ Added new method to ObjectCreator to instantiate an Object with constructor arguments.
+ Separated parameter parsing for reflective invocation out of MethodUtils and into new ParamUtils class.
+ Overhauled the parameter parsing logic now in ParamUtils, and completely changed the API. Instead of separate validation and conversion methods, a single method now does both, significantly improving performance.
+ Created ConstructorUtils class to perform the same operations as MethodUtils, but for Constructors.
+ Significantly improved handling of primitives with reflective invocations.
+ Created new superclass for ReflectiveMethodHolder, ReflectiveHolder, that could be used for a wider range of reflective components.
+ Created new interface, ParameterizedHolder, to define a ReflectiveHolder where the reflective component has parameters.
+ Refactored ReflectiveMethodHolder, ObjectAndMethod, ClassAndMethod, and all accessing code to adapt to these changes to their inheritance hierarchy.
+ Created ObjectAndConstructor, a new subclass of ReflectiveHolder for working with constructors.
+ Created NoConstructorException, for if a matching constructor can't be found.
+ Major overhaul to FindAndInvoke API, standardized method names and removed single-object methods to avoid signature classes.

Version 1.2.1
+ Fixed bugs in SuperWeakHashMap

Version 1.2
+ Rewrote removeAll() method of MultiValueMap to a much better implementation. Also added a copy constructor.