@@ -2,6 +2,7 @@ CM160Utils Changelog
 
 Version 1.3.3
 + Improved FindAndInvoke for when multiple methods could be invoked, identifying the best one to use.
++ Added new ArrayUtil class, with a deepToString() method for getting a String output for arrays.
 
 Version 1.3.2
 + Improved ParamUtils to be able to handle null arguments, thus making all reflective utilities capable of accepting null arguments.
